[workspace]
members = [
    "ledger"
]
[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[patch.crates-io.ic-types]
version = "0.1.2"
git = "https://github.com/dfinity/agent-rs.git"
rev = "6652a800969e7e09ecdf40ed16a2d78abecde7d3"


[patch.crates-io]
raw-cpuid812 = { package="raw-cpuid", version="8.1.2", git = "https://github.com/dfinity-lab/rust-cpuid.git", rev = "03c258337c387dbf559778ba3cb886d45ed46b24"}